# TI-RC

./: .gitignore
chat-server/: Cargo.toml
chat-server/src/: main.rs  protocol.rs  websockets.html
raspi/chat-server/src/: chat.rs  main.rs  protocol.rs
raspi/chat-server/static/: websockets.html
raspi/chat_server/: Cargo.toml
raspi/tcp-relay/: Cargo.toml
raspi/tcp-relay/src/: main.rs
tice/tirc-ui/: makefile
tice/tirc-ui/src/: main.c
