[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sqlite = "0.27.0"
uuid = "1.1.2"
websocket = "0.26.5"

[lib]
name = "chat_server"           # The name of the target.
path = "src/protocol.rs"    # The source file of the target.
edition = "2021"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.